# widgetkit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.ru.md
crates/widgetkit/: Cargo.toml
crates/widgetkit-core/: Cargo.toml
crates/widgetkit-core/src/: color.rs  error.rs  event.rs  geometry.rs  hit_test.rs  ids.rs  layout.rs  lib.rs  tests.rs
crates/widgetkit-host-windows/: Cargo.toml
crates/widgetkit-host-windows/src/: app.rs  lib.rs  surface.rs
crates/widgetkit-render/: Cargo.toml
crates/widgetkit-render/src/: canvas.rs  frame.rs  lib.rs  model.rs  raster.rs  raw.rs  style.rs  surface.rs  tests.rs  text.rs
crates/widgetkit-runtime/: Cargo.toml
crates/widgetkit-runtime/src/: app.rs  context.rs  event.rs  host.rs  internal.rs  lib.rs  scheduler.rs  tasks.rs  tests.rs  widget.rs  window.rs
crates/widgetkit/examples/: clock.rs  pulse.rs
crates/widgetkit/src/: lib.rs
