[workspace]
members = [
  "crates/widgetkit-core",
  "crates/widgetkit-runtime",
  "crates/widgetkit-render",
  "crates/widgetkit-host-windows",
  "crates/widgetkit",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT"
repository = "https://github.com/bat1set/widgetkit"

[workspace.dependencies]
crossbeam-channel = "0.5.15"
font8x8 = "0.3.1"
futures = "0.3.32"
softbuffer = "0.4.8"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "time"] }
winit = "0.30.13"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
