[package]
name = "widgetkit-host-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
softbuffer.workspace = true
winit.workspace = true
widgetkit-core = { path = "../widgetkit-core" }
widgetkit-render = { path = "../widgetkit-render" }
widgetkit-runtime = { path = "../widgetkit-runtime" }
