[package]
name = "widgetkit-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
runtime-tokio = ["dep:tokio"]

[dependencies]
crossbeam-channel.workspace = true
futures.workspace = true
tokio = { workspace = true, optional = true }
widgetkit-core = { path = "../widgetkit-core" }
widgetkit-render = { path = "../widgetkit-render" }
