[package]
name = "widgetkit-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lifecycle-driven runtime, scheduler, and task model for WidgetKit."
repository.workspace = true
readme = "../../README.md"
keywords = ["widgets", "runtime", "scheduler", "gui", "desktop"]
categories = ["gui", "asynchronous"]

[features]
default = []
runtime-tokio = ["dep:tokio"]

[dependencies]
crossbeam-channel.workspace = true
futures.workspace = true
tokio = { workspace = true, optional = true }
widgetkit-core = { version = "0.3.0", path = "../widgetkit-core" }
widgetkit-render = { version = "0.3.0", path = "../widgetkit-render" }
