[package]
name = "widgetkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
canvas = ["dep:widgetkit-core", "dep:widgetkit-render", "dep:widgetkit-runtime"]
windows = ["canvas", "dep:widgetkit-host-windows"]
runtime-tokio = ["canvas", "widgetkit-runtime/runtime-tokio"]

[dependencies]
widgetkit-core = { path = "../widgetkit-core", optional = true }
widgetkit-render = { path = "../widgetkit-render", optional = true }
widgetkit-runtime = { path = "../widgetkit-runtime", optional = true, default-features = false }
widgetkit-host-windows = { path = "../widgetkit-host-windows", optional = true }

[dev-dependencies]
chrono.workspace = true

[[example]]
name = "clock"
path = "examples/clock.rs"
required-features = ["windows", "canvas"]
